--- a/news-portal/index.html
+++ b/news-portal/index.html
@@ -9,6 +9,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="https://soumya190.github.io/NewsWebsite/src/main.jsx"></script>
   </body>
 </html>
