--- a/news-portal/index.html
+++ b/news-portal/index.html
@@ -9,6 +9,9 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="https://soumya190.github.io/NewsWebsite/src/main.jsx"></script>
+    <script type="module">
+      import { someFunction } from 'https://raw.githubusercontent.com/soumya190/NewsWebsite/main/src/main.jsx';
+        someFunction();
+    </script>
   </body>
 </html>
