--- a/news-portal/index.html
+++ b/news-portal/index.html
@@ -10,5 +10,7 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <!-- <script type="module" src="https://raw.githubusercontent.com/Soumya190/NewsWebsite/main/news-portal/src/main.jsx"></script> -->
   </body>
 </html>
+<!-- //https://raw.githubusercontent.com/Soumya190/NewsWebsite/main/news-portal/src/main.jsx -->
